--- a/firmamail/nimax25_ray_prueba.htm
+++ b/firmamail/nimax25_ray_prueba.htm
@@ -9,6 +9,9 @@
         <meta name="creation-date" content="11/02/2015">
         <title>Firmas correo NIMAX</title>
         <style type="text/css">
+		table{
+		
+		}
             a {
                 color: #09C;
                 text-decoration: none;
@@ -28,8 +31,7 @@
                         <strong>
 						Raymundo Castillo
 						</strong
-                    </font><br />
-                    <font face="Trebuchet MS, Arial, Helvetica, sans-serif" color="#05233d" >
+                    <br />
                         <em  style="font-size:18px;">
                             Sistemas
                         </em> 
@@ -38,8 +40,7 @@
                         Magdalena 219 Bis Col. Del Valle 
                     <br>
                         Mexico, D.F. C.P. 03100
-                    </font><br />
-                    <font face="Trebuchet MS, Arial, Helvetica, sans-serif" style="font-size:12px">
+                    <br />
                         Conm.<strong> <font color="#1b4260">  01 (55) 5340 2940 Ext. 308 
                             </font></strong><br />
                     </font>
